2009-10-29  Pavel Feldman  <pfeldman@chromium.org>

        Reviewed by Timothy Hatcher.

        Web Inspector: hide timeline for now - not yet ready.

        https://bugs.webkit.org/show_bug.cgi?id=30912

        * inspector/front-end/inspector.js:
        (WebInspector._createPanels):

2009-10-29  Pavel Feldman  <pfeldman@chromium.org>

        Not reviewed: deploy Web Inspector's images in WebCore.gypi.

        * WebCore.gypi:

2009-10-29  Pavel Feldman  <pfeldman@chromium.org>

        Reviewed by Timothy Hatcher.

        Web Inspector: get rid of timelineProfilerEnabled method.

        https://bugs.webkit.org/show_bug.cgi?id=30911

        * inspector/InspectorBackend.cpp:
        * inspector/InspectorBackend.h:
        * inspector/InspectorBackend.idl:
        * inspector/InspectorController.cpp:
        (WebCore::InspectorController::setWindowVisible):
        * inspector/InspectorController.h:
        * inspector/front-end/TimelinePanel.js:
        (WebInspector.TimelinePanel.prototype._toggleTimelineButtonClicked):

2009-10-29  Pavel Feldman  <pfeldman@chromium.org>

        Reviewed by Darin Fisher.

        Create stub methods for raw cookies access in ChromiumBridge.h

        https://bugs.webkit.org/show_bug.cgi?id=30910

        * platform/chromium/ChromiumBridge.h:

2009-10-29  Zoltan Horvath  <zoltan@webkit.org>

        Reviewed by Darin Adler.

        Allow custom memory allocation control for WebCore's RareData
        https://bugs.webkit.org/show_bug.cgi?id=30858

        Inherits RareData struct from Noncopyable because it is
        instantiated by 'new' in WebCore/css/CSSSelector.h:259 and 
        it is no need to be copyable.

        * css/CSSSelector.h:

2009-10-29  Zoltan Horvath  <zoltan@webkit.org>

        Reviewed by Darin Adler.

        Allow custom memory allocation control for WebCore's ShorthandScope
        https://bugs.webkit.org/show_bug.cgi?id=30859
